# finance_ml

./: .gitignore  Dockerfile.scraper  Dockerfile.server  SPtest.csv  arima-model.py  arima_model.ipynb  arima_model.py  docker-compose.yml  esm_model.py  pyproject.toml  requirements.txt  scraper-cron  scraper.py  server.py  serverTest.js  xpaths.py
data/: BTC-USD.csv  Bi.xlsx  Cr.csv  ETH-USD.csv  Et.csv  SP.csv
src/finance_ml/: arima_model.ipynb  arima_model.py  bs4_scraper.py  generate_models.py  scraper.py  selenium_scraper.py
src/finance_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/finance_ml/data/: BTC-USD.csv  ETH-USD.csv  GLD-USD.csv  SPY-USD.csv  USO-USD.csv
src/server/: server.py  serverTest.js
