[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_ml"
version = "0.0.1"
authors = [
  { name="Joshua Obare", email="jobare.obare@gmail.com" },
]
description = "ML component to financial management system"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/joshuaobare/finance_ml"
Issues = "https://github.com/joshuaobare/finance_ml/issues"